# tabular-sandbox

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
experiments/01_tabpfn/: run.py
notebooks/: 01_tabpfn_adult.ipynb
