[project]
name = "tabular-sandbox"
version = "0.1.0"
description = "テーブルデータ系の実験を放り込むサンドボックス"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # 数値計算・データハンドリング
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.5",

    # GBDT 各種
    "lightgbm>=4.3",
    "xgboost>=2.1",
    "catboost>=1.2",

    # テーブル基盤モデル
    "tabpfn>=2.0",

    # ハイパラ探索・実験管理
    "optuna>=3.6",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.17",

    # 可視化
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",

    # Notebook / 進捗
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "tqdm>=4.66",
    "joblib>=1.3",
    "pyts>=0.13",

    # PyTorch (CUDA 12.6 対応 wheel)
    "torch>=2.7",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
default-groups = ["dev"]
# Linux + Python 3.12 環境に絞って解決
# (Windows/macOS用のCUDA wheelは存在しないため)
environments = [
    "sys_platform == 'linux' and python_version == '3.12'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
